@@ -177,7 +177,12 @@
 #define DCIDESC_PHYSICALDISK_SMARTATTR            _T("")
 #define DCIDESC_PHYSICALDISK_SMARTSTATUS          _T("Status of hard disk {instance} reported by SMART")
 #define DCIDESC_PHYSICALDISK_TEMPERATURE          _T("Temperature of hard disk {instance}")
+#define DCIDESC_SYSTEM_CPU_CACHE_SIZE             _T("CPU {instance}: cache size (KB)")
+#define DCIDESC_SYSTEM_CPU_CORE_ID                _T("CPU {instance}: core ID")
 #define DCIDESC_SYSTEM_CPU_COUNT                  _T("Number of CPU in the system")
+#define DCIDESC_SYSTEM_CPU_FREQUENCY              _T("CPU {instance}: frequency")
+#define DCIDESC_SYSTEM_CPU_MODEL                  _T("CPU {instance}: model")
+#define DCIDESC_SYSTEM_CPU_PHYSICAL_ID            _T("CPU {instance}: physical ID")
 #define DCIDESC_SYSTEM_HOSTNAME                   _T("Host name")
 #define DCIDESC_SYSTEM_MEMORY_PHYSICAL_AVAILABLE  _T("Available physical memory")
 #define DCIDESC_SYSTEM_MEMORY_PHYSICAL_AVAILABLE_PCT _T("Percentage of available physical memory")
